fix styles align modal window editing

--- a/src/pages/User.module.css
+++ b/src/pages/User.module.css
@@ -152,3 +152,9 @@
   width: 1rem;
   height: 1rem;
 }
+
+.alignCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
